lab1/Test/L1-A-12-41.output
Error Type B at Line 9
Error Type B at Line 27
Error Type B at Line 28
Error Type B at Line 30
Error Type A at Line 38
